src/test/ui/closures/2229_closure_analysis/deep-multilevel-tuple.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/deep-multilevel-tuple.rs:12:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/deep-multilevel-tuple.rs:2:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

error: First Pass analysis includes:
  --> $DIR/deep-multilevel-tuple.rs:15:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let x = &t.0.0.0;
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Capturing t[(0, 0),(0, 0),(0, 0)] -> ImmBorrow
  --> $DIR/deep-multilevel-tuple.rs:18:18
   |
LL |         let x = &t.0.0.0;
   |                  ^^^^^^^
note: Capturing t[(1, 0),(1, 0),(1, 0)] -> MutBorrow
  --> $DIR/deep-multilevel-tuple.rs:20:9
   |
LL |         t.1.1.1 = 9;
   |         ^^^^^^^
note: Capturing t[] -> ImmBorrow
  --> $DIR/deep-multilevel-tuple.rs:23:26
   |
LL |         println!("{:?}", t);
   |                          ^

error: Min Capture analysis includes:
  --> $DIR/deep-multilevel-tuple.rs:15:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let x = &t.0.0.0;
...  |
LL | |
LL | |     };
   | |_____^
   |
note: Min Capture t[] -> MutBorrow
  --> $DIR/deep-multilevel-tuple.rs:20:9
   |
LL |         t.1.1.1 = 9;
   |         ^^^^^^^ t[] captured as MutBorrow here
...
LL |         println!("{:?}", t);
   |                          ^ t[] used here

error: aborting due to 3 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
